restructuring head to fix icon overlapping

--- a/resources/assets/scss/partials/_head.scss
+++ b/resources/assets/scss/partials/_head.scss
@@ -89,10 +89,9 @@
   }
 
   .head-button {
-    position: absolute;
-    right: 0;
+    float: right;
     text-decoration: none;
-    top: 56px;
+    vertical-align: top;
 
     i {
       @include transition();
